fix for 'The comment delete appearing on hover should not make the other comments jump and The comment delete confirmation should not disappear on mouseout'.

--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -6,11 +6,22 @@
 	border-bottom: 1px solid #c9c1b8;
 }
 
+#memberDiscussItem .media-body {
+	position:relative;
+}
+
 #memberDiscussItem .media-body .post-action {
 	display: none;
-	margin-bottom: 6px;
 	float: right;
+	position: absolute;
+	bottom:0;
+	right:0;
 }
+
+#memberDiscussItem .media-body .post-action button {
+	margin-bottom:6px;
+}
+
 #memberDiscussItem .media.owner:hover .post-action {
 	display: block;
 }
@@ -19,6 +30,15 @@
 	font-size: 12px;
 	float: left;
 	margin: 5px 6px 0 0;
+}
+
+#memberDiscussItem .prompt-deletion {
+  background: #faf9f4;
+	padding: 4px 4px 0;
+  -webkit-transition: background .5s ease-out;
+  -moz-transition: background .5s ease-out;
+  -o-transition: background .5s ease-out;
+  transition: background .5s ease-out;
 }
 
 #memberDiscussItem .panel-footer {
